--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@reduxjs/toolkit": "^1.9.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "jwt-decode": "^3.1.2",
     "next": "13.1.5",
+    "next-auth": "^4.19.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
   },
